--- a/Bookshop/src/main/webapp/WEB-INF/web.xml
+++ b/Bookshop/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.bookshop.resource</param-value>
+            <param-value>com.mycompany.bookshop.resources</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
